--- a/docker/docker-compose-develop.yml
+++ b/docker/docker-compose-develop.yml
@@ -1,46 +1,44 @@
 version: '3.8'
 
 services:
-  marketingbot-dev:
-    image: music-bot
+  musicbot-dev:
+    image: nekitvp/musicbot:1.0.0
     restart: on-failure
     depends_on:
-      - marketingbot-db
+      - musicbot-db
     expose:
       - "8080"
     ports:
       - "5006:8080"
     networks:
-      - marketingbot-dev
+      - musicbot-dev
     environment:
-      DB_HOST: marketingbot-db
+      DB_HOST: musicbot-db
       DB_PORT: 5432
       DB_USERNAME: postgres
       DB_PASSWORD: ks51zcVavcChfepPaeORY5aGff9904fU
       SPRING_PROFILES_ACTIVE: develop
-      DB_NAME: marketingbot
-      VIRTUAL_HOST: $HOSTNAME
-      VIRTUAL_PORT: 8080
+      DB_NAME: musicbot
 
-  marketingbot-db:
-    container_name: marketingbot-db
+  musicbot-db:
+    container_name: musicbot-db
     image: postgres:12-alpine
     restart: on-failure
     volumes:
-      - pgdata-marketingbot-dev:/var/lib/postgresql/data
+      - pgdata-musicbot-dev:/var/lib/postgresql/data
     expose:
       - "5432"
     ports:
       - "2345:5432"
     networks:
-      - marketingbot-dev
+      - musicbot-dev
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ks51zcVavcChfepPaeORY5aGff9904fU
-      POSTGRES_DB: marketingbot
+      POSTGRES_DB: musicbot
 
 networks:
-  marketingbot-dev:
+  musicbot-dev:
 
 volumes:
-  pgdata-marketingbot-dev:
+  pgdata-musicbot-dev:
