--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -1,4 +1,6 @@
 bot: # t.me/prizvan_sluzhit_develop_bot
   name: Призван служить DEVELOP
   token: 6918318319:AAGXiCWNU0t79EW5KqCTcj4mptYh7Z8bE9I
-  groupChatId: -1002093961472
+  groupChatId: -1002087539171
+  replyMessageId: 2
+
