--- a/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
+++ b/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: /db/changelog/v1/2024-01-24_init_db.yml
+  - include:
+      file: /db/changelog/v1/2024-01-30-re-type-selected.yml
