добавил обнуляемый счетчик, чтобы смотреть на статистику

--- a/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
+++ b/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: /db/changelog/v1/2024-01-30-re-type-selected.yml
   - include:
       file: /db/changelog/v1/2024-01-30-add-index-and-count-state.yml
+  - include:
+      file: /db/changelog/v1/2024-01-31-add-count-change-state-all.yml
