--- a/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
+++ b/src/main/resources/db/changelog/v1/changelog_v1.0_cumulative.yml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: /db/changelog/v1/2024-01-30-add-index-and-count-state.yml
   - include:
       file: /db/changelog/v1/2024-01-31-add-count-change-state-all.yml
+  - include:
+      file: /db/changelog/v1/2024-02-04-add-table-files.yml
